--- a/styles.css
+++ b/styles.css
@@ -305,6 +305,7 @@ hr{
 .carousel__elemento{
     text-align: center;
     margin: 5px;
+    border: 2px solid #ffffff;
 }
 
 .carousel__indicadores .glider-dot{
