--- a/styles.css
+++ b/styles.css
@@ -340,18 +340,19 @@ hr{
          position: absolute;
          top: 0;
          left: 0;
+         width: 100%;
          background: #2f3640;
-         height: 100%;
-         padding: 30px;
+         height: auto;
+         padding: 0;
          opacity: .9;
-         transform: translateX(-400px);
+         transform: translateY(-1000px);
          transition: transform .6s ease-in-out;
-         
+         text-align: center;
 
     }
 
     .nav-main ul.nav-menu.show{
-        transform: translate(-20px);
+        transform: translateY(-15px);
     }
 
     .nav-main ul.nav-menu li{
